load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "Timer",
    srcs = [
        "clock.c",
        "driver.c",
        "stdinout.c",
        "timer.c",
        "clock.h",
        "consts.h",
        "inout.h",
        "timer.h"
    ],
    copts = [ "" ], # copts = [ "-DSTDINPUT" ],
)

