###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
bazel_dep( name = "cpptest" )

local_path_override(
    module_name = "cpptest",
    path = "/opt/parasoft/cpptest/2026.1.0/std",
)

bazel_dep(name = "rules_cc", version = "0.0.9")